--- a/components/style.scss
+++ b/components/style.scss
@@ -12,6 +12,12 @@
     font-size: 17px;
     transition: all .7s;
 }
+.section-title{
+    font-weight: 700;
+    font-size: 57px;
+    color: #f4bdbd;
+    text-transform: uppercase;
+}
 .general-btn:hover{
     scale: 1.1;
     background: #000000;
@@ -134,10 +140,88 @@
 }
 
 .main{
-    display: flex;
-    &-title{
-        font-weight: 700;
-        font-size: 57px;
-        color: #f4bdbd;
+    &-wrapper{
+        background: url(/img/task-bg.png) no-repeat center/cover;
+    }
+    &-cards{
+        &-item{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &-title{
+                
+            }
+            &-desk{
+
+            }
+            &:nth-child(1){
+                position: relative;
+                background: url(/img/task-item-bg-1.png) no-repeat center/cover;
+                width: 400px;
+                height: 200px;
+                &::after{
+                    content: '';
+                    position: absolute;
+                    background: url(/img/task-heart.png) no-repeat center/cover;
+                    width: 185px;
+                    height: 185px;
+                    right: -350px;
+                }
+            }
+            &:nth-child(2){
+                margin-left: 120px;
+                position: relative;
+                top: -40px;
+                background: url(/img/task-item-bg-2.png) no-repeat center/cover;
+                width: 400px;
+                height: 400px;
+                flex-direction: column;
+                color: #eee;
+                padding-top: 100px;
+                justify-content: flex-start;
+                &::after{
+                    content: '';
+                    position: absolute;
+                    background: url(/img/task-message.png) no-repeat center/cover;
+                    width: 225px;
+                    height: 225px;
+                    right: -390px;
+                    top: -30;
+                }
+                & h4, p{
+                    width: 190px;
+                }
+                & h4{
+                    margin-bottom: 30px;
+                }
+            }
+            &:nth-child(3){
+                margin-left: 240px;
+                position: relative;
+                top: -200px;
+                background: url(/img/task-item-bg-3.png) no-repeat center/cover;
+                width: 500px;
+                height: 440px;
+                flex-direction: column;
+                align-items: flex-end;
+                &::after{
+                    content: '';
+                    position: absolute;
+                    background: url(/img/task-laptop.png) no-repeat center/cover;
+                    width: 270px;
+                    height: 270px;
+                    right: -350px;
+                }
+                & h4, & p{
+                    text-align: right;
+                    width: 190px;
+                    margin-right: 50px;
+                    margin-top: 50px;
+                }
+                & h4{
+                  width: 100%;  
+                }
+            }
+        }
     }
 }
