--- a/components/style.scss
+++ b/components/style.scss
@@ -395,3 +395,88 @@
         }
     }
 }
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &-wrapper{
+    background: #020202;
+    padding: 34px 0px;
+    }
+    &-name{
+        color: #FF0000;
+        font-size: 15px;
+        text-transform: uppercase;
+        font-weight: 800;
+    }
+    &-list{
+        display: flex;
+        justify-content: space-between;
+        color: #D8D3D3;
+        &-item{
+            font-weight: 800;
+        }
+    }
+    &-title{
+        color: #FF0000;
+        font-weight: 800;
+        margin-bottom: 17px;
+        text-transform: uppercase;
+    }
+    &-subtitle{
+        color: #D8D3D3;
+        margin-bottom: 10px;
+        font-weight: 800;
+    }
+    &-shape{
+        width: 70%;
+        border-left: 2px solid #FF2929;
+        padding: 17px;
+    }
+}
+.overlay{
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 10;
+}
+.modal{
+    background: url(/img/task-bg.png) no-repeat center/cover;
+    padding: 50px;
+    border: 20px solid #890000;
+    border-radius: 24px;
+    width: 30vw;
+    &-form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        &-btn{
+            padding: 16px 62px;
+        }
+        &-input{
+            width: 100%;
+            border: 4px solid #721010;
+            border-radius: 15px;
+            margin-bottom: 34px;
+            color: white;
+            padding: 15px 0px 15px 15px;
+            background: rgba(0, 0, 0, 0.485);
+            &::placeholder{
+                color: #FC0000;
+            }
+        }
+    }
+    &-title{
+        text-transform: uppercase;
+        font-size: 35px;
+        font-weight: 800;
+        color: #E5DEDE;
+        margin-bottom: 120px;
+    }
+}
