--- a/css/style.css
+++ b/css/style.css
@@ -410,4 +410,95 @@ input:focus-visible {
   margin-top: 110px;
   margin-left: 50px;
   transition: 0.5s;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-wrapper {
+  background: #020202;
+  padding: 34px 0px;
+}
+.footer-name {
+  color: #FF0000;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 800;
+}
+.footer-list {
+  display: flex;
+  justify-content: space-between;
+  color: #D8D3D3;
+}
+.footer-list-item {
+  font-weight: 800;
+}
+.footer-title {
+  color: #FF0000;
+  font-weight: 800;
+  margin-bottom: 17px;
+  text-transform: uppercase;
+}
+.footer-subtitle {
+  color: #D8D3D3;
+  margin-bottom: 10px;
+  font-weight: 800;
+}
+.footer-shape {
+  width: 70%;
+  border-left: 2px solid #FF2929;
+  padding: 17px;
+}
+
+.overlay {
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 10;
+}
+
+.modal {
+  background: url(/img/task-bg.png) no-repeat center/cover;
+  padding: 50px;
+  border: 20px solid #890000;
+  border-radius: 24px;
+  width: 30vw;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.modal-form-btn {
+  padding: 16px 62px;
+}
+.modal-form-input {
+  width: 100%;
+  border: 4px solid #721010;
+  border-radius: 15px;
+  margin-bottom: 34px;
+  color: white;
+  padding: 15px 0px 15px 15px;
+  background: rgba(0, 0, 0, 0.485);
+}
+.modal-form-input::-moz-placeholder {
+  color: #FC0000;
+}
+.modal-form-input::placeholder {
+  color: #FC0000;
+}
+.modal-title {
+  text-transform: uppercase;
+  font-size: 35px;
+  font-weight: 800;
+  color: #E5DEDE;
+  margin-bottom: 120px;
 }/*# sourceMappingURL=style.css.map */
