--- a/components/style.scss
+++ b/components/style.scss
@@ -146,6 +146,10 @@
     &-burgermenu-form{
         display: none;
         flex-direction: column;
+        cursor: pointer;
+        @media  (max-width:426px) {
+            display: flex;
+        }
         &-child-1{
             border-radius: 11px;
             width: 50px;
@@ -648,4 +652,5 @@
         line-height: 100%;
         letter-spacing: 0.01em;
     }
+
 }
