update changes burger

--- a/components/style.scss
+++ b/components/style.scss
@@ -173,7 +173,7 @@
         }
     }
     &-burgermenu{
-        display: none;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -181,6 +181,18 @@
         width: 295px;
         height: 468px;
         background: rgba(175, 3, 3, 0.89);
+        &-overlay{
+            position: fixed;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 12;
+            background: rgba(0, 0, 0, 0.5);
+        }
         &-title{
             font-weight: 700;
             font-size: 24px;
